src/ui/snapshots/mult__ui__tests__snapshot_sidebar_and_main_pane_default_state.snap
---
source: src/ui.rs
expression: "draw_grid(&app, &PtyRuntime::new_offline(), 100, 12)"
---
symbols:
| ▣ orbit                    main Terminal is stopped. Type to start it and send input.             |
|   · agent: pi                                                                                      |
|   $ terminal                                                                                       |
|                                                                                                    |
|                                                                                                    |
|                                                                                                    |
|                                                                                                    |
|                                                                                                    |
|                                                                                                    |
|                                                                                                    |
|                                                                                                    |
|                                                                                                    |

backgrounds (. nc  : base  # highlight  * selection  @ cursor  r reset):
|..................................::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::|
|##################################::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::|
