src/ui/snapshots/mult__ui__tests__snapshot_status_line_shows_an_error.snap
---
source: src/ui.rs
expression: "draw_grid(&app, &PtyRuntime::new_offline(), 100, 12)"
---
symbols:
| ▣ orbit                    main Terminal is stopped. Type to start it and send input.             |
|   · agent: pi                                                                                      |
|   $ terminal                                                                                       |
|                                                                                                    |
|                                                                                                    |
|                                                                                                    |
|                                                                                                    |
|                                                                                                    |
|                                                                                                    |
|                                                                                                    |
|                                                                                                    |
|x failed to connect to mult-server: No such file or directory  (ctrl-g dismisses)                   |

backgrounds (. nc  : base  # highlight  * selection  @ cursor  r reset):
|..................................::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::|
|##################################::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::|
|..................................::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::|
|::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::|
